@@ -37,7 +37,7 @@ public class CommandBuilderUtilsSuite {
     testOpt(" a b c \\\\ ", Arrays.asList("a", "b", "c", "\\"));
 
     // Following tests ported from UtilsSuite.scala.
-    testOpt("", new ArrayList<String>());
+    testOpt("", new ArrayList<>());
     testOpt("a", Arrays.asList("a"));
     testOpt("aaa", Arrays.asList("aaa"));
     testOpt("a b c", Arrays.asList("a", "b", "c"));
@@ -97,42 +97,6 @@ public class CommandBuilderUtilsSuite {
     assertEquals(9, javaMajorVersion("9"));
     assertEquals(9, javaMajorVersion("9.1.0"));
     assertEquals(10, javaMajorVersion("10"));
-  }
-
-  @Test
-  public void testAddPermGenSizeOpt() {
-    List<String> cmd = new ArrayList<>();
-
-    if (javaMajorVersion(System.getProperty("java.version")) > 7) {
-      // Does nothing in Java 8
-      addPermGenSizeOpt(cmd);
-      assertEquals(0, cmd.size());
-      cmd.clear();
-
-    } else {
-      addPermGenSizeOpt(cmd);
-      assertEquals(1, cmd.size());
-      assertTrue(cmd.get(0).startsWith("-XX:MaxPermSize="));
-      cmd.clear();
-
-      cmd.add("foo");
-      addPermGenSizeOpt(cmd);
-      assertEquals(2, cmd.size());
-      assertTrue(cmd.get(1).startsWith("-XX:MaxPermSize="));
-      cmd.clear();
-
-      cmd.add("-XX:MaxPermSize=512m");
-      addPermGenSizeOpt(cmd);
-      assertEquals(1, cmd.size());
-      assertEquals("-XX:MaxPermSize=512m", cmd.get(0));
-      cmd.clear();
-
-      cmd.add("'-XX:MaxPermSize=512m'");
-      addPermGenSizeOpt(cmd);
-      assertEquals(1, cmd.size());
-      assertEquals("'-XX:MaxPermSize=512m'", cmd.get(0));
-      cmd.clear();
-    }
   }
 
   private static void testOpt(String opts, List<String> expected) {
